# its-pikachu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yaml
notebooks/: types.ipynb
pokeml/: __init__.py
pokeml/data/: __init__.py  _types.py  fetch_data.py
