[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "its_pikachu"
version = "0.0.0"
description = "Machine Learning Pokemon Applictions."
authors = [
  { name="Jack Atkinson", email="jack.atkinson1000@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9.10"

dependencies = [
    "torch>=2.0",
    "torchvision>=0.13",
    "torch_tools @ git+https://github.com/jdenholm/TorchTools.git",
    "matplotlib",
]

[project.optional-dependencies]
# test = [
#     "pytest>=7.2.0",
# ]
lint = [
    "black>=22.12.0",
    "pylint",
    "pydocstyle",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jatkinson1000/its-pikachu"
"Bug Tracker" = "https://github.com/jatkinson1000/its-pikachu/issues"

[tool.setuptools]
package-dir = {}
